--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
         rel="stylesheet" href="https://minlleseok.github.io/css/github.css" />
     <meta name="viewport" content="width=device-width">
 
-    <title>404 Page not found - My New Hugo Site</title>
+    <title>404 Page not found - Happiness Development</title>
 
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://minlleseok.github.io/images/favicon.ico">
     <meta name="theme-color" content="#1e2327">
@@ -116,7 +116,7 @@ if (!doNotTrack) {
             <li class="mr-3 mr-lg-0">© 2019. Theme by <a href="https://github.com/MeiK2333/github-style"><span>github-style</span></a></li>
         </ul>
 
-        <a aria-label="Homepage" title="My New Hugo Site" class="footer-octicon d-none d-lg-block mx-lg-4"
+        <a aria-label="Homepage" title="Happiness Development" class="footer-octicon d-none d-lg-block mx-lg-4"
             href="https://minlleseok.github.io/">
             <svg height="24" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="24"
                 aria-hidden="true">
