--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet" href="https://minlleseok.github.io/css/github.css" />
     <meta name="viewport" content="width=device-width">
 
-    <title>My New Hugo Site</title>
+    <title>Happiness Development</title>
 
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://minlleseok.github.io/images/favicon.ico">
     <meta name="theme-color" content="#1e2327">
@@ -106,7 +106,7 @@ if (!doNotTrack) {
                     <span class="p-name vcard-fullname d-block overflow-hidden"
                         itemprop="name">Jose Seok</span>
                     <span class="p-nickname vcard-username d-block"
-                        itemprop="additionalName">https://github.com/MinlleSeok</span>
+                        itemprop="additionalName">MinlleSeok</span>
                 </h1>
             </div>
 
@@ -116,12 +116,12 @@ if (!doNotTrack) {
                     <span class="follow">
                         <input type="button" style="max-width: 100%" value="Follow"
                             class="btn btn-block top-0 js-sticky js-user-profile-follow-button mb-2  js-toggler-target"
-                            title="Follow" onclick="window.location.href = 'https://github.com/https:\/\/github.com\/MinlleSeok'" />
+                            title="Follow" onclick="window.location.href = 'https://github.com/MinlleSeok'" />
                     </span>
                     <span class="unfollow">
                         <input type="button" style="max-width: 100%" value="Unfollow"
                             class="btn btn-block top-0 js-sticky js-user-profile-follow-button mb-2  js-toggler-target"
-                            title="Unfollow" onclick="window.location.href = 'https://github.com/https:\/\/github.com\/MinlleSeok'" />
+                            title="Unfollow" onclick="window.location.href = 'https://github.com/MinlleSeok'" />
                     </span>
                 </span>
             </div>
@@ -165,7 +165,7 @@ if (!doNotTrack) {
 
                 
                 <a class="avatar-group-item" data-hovercard-type="organization"
-                    href="https://github.com/https://github.com/MinlleSeok">
+                    href="https://github.com/MinlleSeok">
                     <img src="https://minlleseok.github.io/images/github.png" class="avatar" width="35" height="35">
                 </a>
                 
@@ -234,7 +234,7 @@ if (!doNotTrack) {
             <li class="mr-3 mr-lg-0">© 2019. Theme by <a href="https://github.com/MeiK2333/github-style"><span>github-style</span></a></li>
         </ul>
 
-        <a aria-label="Homepage" title="My New Hugo Site" class="footer-octicon d-none d-lg-block mx-lg-4"
+        <a aria-label="Homepage" title="Happiness Development" class="footer-octicon d-none d-lg-block mx-lg-4"
             href="https://minlleseok.github.io/">
             <svg height="24" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="24"
                 aria-hidden="true">
