--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@ if (!doNotTrack) {
                 <summary class="Header-link" aria-label="View profile and more"
                     data-ga-click="Header, show menu, icon:avatar">
                     
-                    <img alt="" class="avatar" src="https://minlleseok.github.io/images/avatar.jpg" height="20" width="20">
+                    <img alt="" class="avatar" src="https://minlleseok.github.io/images/avatar.png" height="20" width="20">
                     
                 </summary>
             </details>
