--- a/tech/index.html
+++ b/tech/index.html
@@ -245,6 +245,26 @@ if (!doNotTrack) {
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
                             <h3>
+                                <a href="https://mj-seok.com/tech/erwin/">Erwin</a>
+                            </h3>
+                        </div>
+
+                        <div name="posts-post">
+                            ERwin 공부  Model 탭 - Logical / Physical - IE 방식 표현  기본 Entities 생성  좌측 Entities - 우 클릭 후 New 우측 도구상자에서 엔티티 버튼(사각형)  Entity 설정  사각형 위쪽 - 타입의 이름 설정 Tab - Key Attribute Tab - Attribute Enter - Next Attribute  관계  엔티티와 엔티티 사이의 선으로 표현 Relationships - New  Parent Child Identifying Non Identifying    
+                        </div>
+
+                        <div class="f6 text-gray mt-2">
+                            Updated <relative-time datetime="2020-06-03" class="no-wrap"
+                                title="Modifyd at 2020/06/03">
+                                June 3, 2020</relative-time>
+                        </div>
+                    </div>
+                </li>
+                
+                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
+                    <div class="col-12 col-lg-12 d-inline-block">
+                        <div class="d-inline-block mb-1">
+                            <h3>
                                 <a href="https://mj-seok.com/tech/hangul/">사무행정과 한글</a>
                             </h3>
                         </div>
@@ -436,27 +456,6 @@ Hugo 설치 (Install Hugo) brew install hugo Hugo 버전 확인 (check Hugo&rsqu
                         <div class="f6 text-gray mt-2">
                             Updated <relative-time datetime="2019-12-30" class="no-wrap"
                                 title="Modifyd at 2020/01/07">
-                                December 30, 2019</relative-time>
-                        </div>
-                    </div>
-                </li>
-                
-                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
-                    <div class="col-12 col-lg-12 d-inline-block">
-                        <div class="d-inline-block mb-1">
-                            <h3>
-                                <a href="https://mj-seok.com/tech/go-first/">고로 작성해봐요 - Write in Go</a>
-                            </h3>
-                        </div>
-
-                        <div name="posts-post">
-                            고로 작성해봐요 - Write in Go 안녕, 고 (Hello, Go) package main import &#34;fmt&#34; func main() { fmt.Println(&#34;Hello, Go&#34;) } Go 언어 설치 (Install Go Language) https://golang.org/
-Go 설치 후 go tour 시작 코드 (After installing, go tour code) % go get code.google.com/p/go-tour/gotour 패키지 (Packages) package main import ( &#34;fmt&#34; &#34;math/rand&#34; ) func main() { fmt.Println(&#34;My favorite number is&#34;, rand.Intn(10)) }  모든 Go 프로그램은 패키지로 구성 (Every Go Program is made up of packages) import () 형태로 패키지를 불러옵니다.
-                        </div>
-
-                        <div class="f6 text-gray mt-2">
-                            Updated <relative-time datetime="2019-12-30" class="no-wrap"
-                                title="Modifyd at 2020/01/08">
                                 December 30, 2019</relative-time>
                         </div>
                     </div>
