--- a/database/index.html
+++ b/database/index.html
@@ -245,6 +245,26 @@ if (!doNotTrack) {
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
                             <h3>
+                                <a href="https://mj-seok.com/database/model/">SQL 전문가 가이드 - 데이터 모델의 이해</a>
+                            </h3>
+                        </div>
+
+                        <div name="posts-post">
+                            SQL 전문가 가이드 - 데이터 모델의 이해  복잡한 현실세계를 일정한 표기법에 의해 표현하는 일 현실세계 추상화(모형화), 단순화, 명확화 모델(MODEL)  모델링에 대한 다양한 정의  Webster 사전  가설적 일정 양식에 맞춘 표현 어떤 것에 대한 예비표현으로, 그로부터 최종대상이 구축되도록 하는 계획으로서 기여하는 것   복잡한 &lsquo;현실세계'를 단순화시켜 표현하는 것 모델이란 사물 또는 사건에 관한 양상(Aspect)이나 관점(Perspective)을 연관된 사람이나 그룹을 위하여 명확하게 하는 것이다. 모델이란 현실 세계의 추상화된 반영이다.
+                        </div>
+
+                        <div class="f6 text-gray mt-2">
+                            Updated <relative-time datetime="2020-07-04" class="no-wrap"
+                                title="Modifyd at 2020/07/04">
+                                July 4, 2020</relative-time>
+                        </div>
+                    </div>
+                </li>
+                
+                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
+                    <div class="col-12 col-lg-12 d-inline-block">
+                        <div class="d-inline-block mb-1">
+                            <h3>
                                 <a href="https://mj-seok.com/database/sql-case/">SQL Case 표현</a>
                             </h3>
                         </div>
